--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -86,6 +86,7 @@ body:
       label: PyCM version
       description: Which version of PyCM are you using?
       options:
+        - PyCM 4.5
         - PyCM 4.4
         - PyCM 4.3
         - PyCM 4.2
